# torent_dfl

./: README.md  pyproject.toml  requirements.txt
dfl/: __init__.py  aggregation.py  data.py  node.py  segmentation.py
dfl/communication/: __init__.py  caching.py  encoders.py  nats.py  qbittorrent.py
dfl/communication/grpc/: __init__.py  communication.proto  communication_pb2.py  communication_pb2.pyi  communication_pb2_grpc.py  gen-communication-grpc.zsh
dfl/extensions/: asyncio.py  frozendict.py  frozenset.py  os.py  torch.py  torrentfile.py
dfl/extensions/qbittorrentapi/: __init__.py  exceptions.py  file_tree.py  hash.py  torrents.py
dfl/extensions/zipfile/: __init__.py  directory.py
